--- a/app/views/booking/new.html.erb
+++ b/app/views/booking/new.html.erb
@@ -1,3 +1,18 @@
 <div class="container">
-  <div class="calendar"></div>
+  <div class="calendar">
+    <div> select dates for hire </div>
+      <div>
+        <%= simple_form_for(@booking) do |f| %>
+          <%= f.input :starts_date,
+          as: :string,
+          input_html: { data: { controller: "datepicker" } } %>
+
+          <%= f.input :end_date,
+            as: :string,
+            input_html: { data: { controller: "datepicker" } } %>
+
+          <%= f.submit %>
+        <% end %>
+      </div>
+  </div>
 </div>
