--- a/app/views/starships/index.html.erb
+++ b/app/views/starships/index.html.erb
@@ -2,6 +2,8 @@
 <%# <div id="carousel">
   <!-- 3D moving carousels go here -->
 </div> %>
-<%# <%= link_to 'View Profile', profile_path %>
-<%# <%= link_to 'Edit Profile', edit_profile_path %>
-<%# <%= link_to 'Delete Account', account_delete_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+<div class="spaceships">
+  <% @starships.each do |spaceship| %>
+    <%= link_to spaceship.name, spaceship %>
+  <% end %>
+</div>
