--- a/app/views/starships/show.html.erb
+++ b/app/views/starships/show.html.erb
@@ -8,4 +8,4 @@
 </div>
 
 <button type="button" class="btn btn-secondary btn-lg">Large button</button>
-<%= link_to "Book Now", new_booking_path(@starship), class: "btn primary" %>
+<%= link_to "Book Now", new_starship_booking_path(@starship), class: "btn primary" %>
