--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<div class="container">
+  <div class="calendar">
+    <div> select dates for hire </div>
+      <div>
+        <%= simple_form_for([@starship, @booking]) do |f| %>
+          <%= f.input :starts_date,
+          as: :string,
+          input_html: { data: { controller: "datepicker" } } %>
+
+          <%= f.input :end_date,
+            as: :string,
+            input_html: { data: { controller: "datepicker" } } %>
+
+          <%= f.button :submit %>
+        <% end %>
+      </div>
+  </div>
+</div>
