--- a/app/views/starships/index.html.erb
+++ b/app/views/starships/index.html.erb
@@ -7,3 +7,6 @@
     <%= link_to spaceship.name, spaceship %>
   <% end %>
 </div>
+<div style="width: 100%; height: 600px;" data-controller="map"
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
