--- a/app/views/starships/index.html.erb
+++ b/app/views/starships/index.html.erb
@@ -1,9 +1,12 @@
-<h1>Futuristic Spaceship Marketplace</h1>
-<%# <div id="carousel">
-  <!-- 3D moving carousels go here -->
-</div> %>
-<div class="spaceships">
-  <% @starships.each do |spaceship| %>
-    <%= link_to spaceship.name, spaceship %>
-  <% end %>
+<div class="container">
+  <h1>Futuristic Spaceship Marketplace</h1>
+  <%# <div id="carousel">
+    <!-- 3D moving carousels go here -->
+  </div> %>
+  <div class="spaceships">
+    <% @starships.each do |spaceship| %>
+      <%= link_to spaceship.name, spaceship %>
+      <br>
+    <% end %>
+  </div>
 </div>
