--- a/app/views/starships/show.html.erb
+++ b/app/views/starships/show.html.erb
@@ -4,8 +4,7 @@
     <p>R<%= @starship.price %></p>
     <p><%= @starship.mass %>kg</p>
     <p><%= @starship.top_speed %>km/h</p>
-  <p>Posted by <%= @starship.name %></p>
+  <p>Posted by <%= @starship.user.email %></p>
 </div>
 
-<button type="button" class="btn btn-secondary btn-lg">Large button</button>
 <%= link_to "Book Now", new_starship_booking_path(@starship), class: "btn primary" %>
