--- a/app/views/starships/show.html.erb
+++ b/app/views/starships/show.html.erb
@@ -7,6 +7,7 @@
   <p>Posted by <%= @starship.user.email %></p>
 </div>
 
-<%= link_to "Book Now", new_starship_booking_path(@starship), class: "btn primary" %>
+<%= link_to "Book Now", new_starship_booking_path(@starship), class: "btn primary mt-3" %>
 
-<%= cl_image_tag @starship.photo.key, height: 300, width: 400, crop: :fill %>
+<%= cl_image_tag @starship.photo.key, height: 300, width: 400, crop: :fill, class: "img " %>
+
