--- a/app/views/starships/show.html.erb
+++ b/app/views/starships/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
   <h1><%= @starship.name %></h1>
-    <p>R<%= @starship.price %></p>
+    <p>$<%= @starship.price %></p>
     <p><%= @starship.mass %>kg</p>
     <p><%= @starship.top_speed %>km/h</p>
   <p>Posted by <%= @starship.user.email %></p>
