--- a/app/views/starships/index.html.erb
+++ b/app/views/starships/index.html.erb
@@ -1,5 +1,21 @@
 <div class="container">
+
   <h1>Select Your Starship Trooper</h1>
+
+<!-- TODO: Insert inside the `.container`, above the first `.row` -->
+<div class="row justify-content-center">
+  <div class="col-sm-8 my-3">
+    <%= form_with url: root_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Type a keyword"
+        %>
+      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+
   <div class="spaceships">
     <% @starships.each do |starship| %>
       <div class="index-cards">
@@ -14,4 +30,5 @@
 </div>
 <div style="width: 100%; height: 600px;" data-controller="map"
   data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
