--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Honk&family=Lacquer&family=Major+Mono+Display&family=Nabla:EDPT,EHLT@135,15&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
   </head>
 
   <body>
-  <%= render "shared/navbar" %>
+    <%= render "shared/navbar" %>
+    <div id="threejs-container"><%= javascript_include_tag "scripts/background", type: "module" %></div>
     <%= yield %>
+    <%= javascript_importmap_tags %>
+
   </body>
 </html>
