--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,9 +2,8 @@
   justify-content: space-between;
   backdrop-filter: blur(2px) saturate(180%);
   -webkit-backdrop-filter: blur(2px) saturate(180%);
-  background-color: rgba(17, 25, 40, 0.238);
-  border-radius: 45px;
-  border: 1px solid rgba(255, 255, 255, 0.125);
+  background-color: rgba(40, 17, 17, 0.238);
+  border-bottom: 2px $red;
   padding-left: 32px;
   padding-right: 32px;
   margin-top: 16px;
@@ -18,6 +17,6 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-brand .btn:hover {
+  font: $light-gray;
 }
