--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,12 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Honk&family=Lacquer&family=Major+Mono+Display&family=Nabla:EDPT,EHLT@135,15&family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Honk&family=Lacquer&family=Major+Mono+Display&family=Nabla:EDPT,EHLT@135,15&family=Orbitron:wght@400..900&display=swap');
 // Define fonts for body and headers
-$body-font: "Markazi Text", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
-
+$body-font: "Orbitron";
+$headers-font: "Orbitron";
 // To use a font file (.woff) uncomment following lines
 // @font-face {
 //   font-family: "Font Name";
