--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -7,10 +7,10 @@
   z-index: 10; /* Higher than the background image */
   pointer-events: none; /* Allows user interactions to pass through if needed */
 }
-body {
-	width: 100vw;
-	height: 100vh;
-	margin: 0;
-	background: #000;
-	overflow: hidden;
-}
+// body {
+// 	width: 100vw;
+// 	height: 100vh;
+// 	margin: 0;
+// 	background: #000;
+// 	overflow: hidden;
+// }
