--- a/app/assets/stylesheets/components/_showpage.scss
+++ b/app/assets/stylesheets/components/_showpage.scss
@@ -1,4 +1,4 @@
-.container {
+.container-show {
   position: relative; /* Ensure elements can be positioned relative to this container */
   display: grid; /* Use CSS Grid for layout */
   grid-template-columns: 1fr 1fr; /* Two columns: info on the left, image and button on the right */
