--- a/app/views/starships/show.html.erb
+++ b/app/views/starships/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-show">
   <!-- Left Column: Info Boxes -->
   <div class="info-container">
     <!-- Top Row -->
