--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,27 +1,22 @@
 <div class="container booking">
   <!-- Button to Add New Starship -->
-  <div class="button-main">
+  <div class="btn primary">
     <%= link_to "Add New Starship", new_starship_path, class: 'btn btn-primary' %>
   </div>
 
   <!-- Carousel Section -->
-  <div class="carousel" data-controller="carousel">
-    <div class="carousel-track" data-carousel-target="track">
+  <div class="infinite-slider" data-controller="slider">
+    <div class="slider-track"
+        data-slider-target="track"
+        data-action="mouseenter->slider#pauseAnimation mouseleave->slider#resumeAnimation wheel->slider#onWheel">
       <% @starships.each do |starship| %>
-        <div class="book-ss-card" data-carousel-target="card">
-          <div class="book-ss-head">
-            <div class="name">
-              <%= starship.name %>
+        <div class="slider-item-book">
+          <%= link_to starship do %>
+            <%= cl_image_tag starship.photo.key, height: 200, width: 300, crop: :fill %>
+            <div class="slider-name">
+              <h3><%= starship.name %></h3>
             </div>
-
-            <div class="icons d-flex justify-content-between">
-              <%= link_to "Edit", edit_starship_path(starship) %>
-              <%= link_to "Destroy", starship_path(starship), method: :delete, data: { confirm: "Are you sure?" } %>
-            </div>
-          </div>
-          <div class="img">
-            <%= cl_image_tag starship.photo.key, height: 300, width: 400, crop: :fill, class: "img" %>
-          </div>
+          <% end %>
         </div>
       <% end %>
     </div>
@@ -33,7 +28,7 @@
   <div class="d-flex justify-center" data-controller="reload">
     <!-- My Bookings -->
     <div class="bookings">
-      <h1>My Bookings</h1>
+      <h1>Bookings</h1>
       <div class="spaceships-book">
         <% @my_bookings.each do |booking| %>
           <div class="starship">
@@ -51,33 +46,33 @@
 
     <!-- Pending Bookings -->
     <div class="bookings" data-reload-target="starships">
-      <h1>Pending Bookings</h1>
+      <h1>Booking From Me</h1>
       <div class="spaceships-book">
         <% @bookings.each do |booking| %>
           <div class="starship">
-            <div class="name d-flex justify-content-between">
-              <%= booking.starship.name %>
-              <%= booking.user.email %>
-            </div>
+  <div class="name d-flex justify-content-between">
+    <%= booking.starship.name %>
+    <%= booking.user.username %>
+  </div>
 
-            <% if booking.status == 'pending' %>
+  <% if booking.status == 'pending' %>
+    <div class="actions">
+      <div data-reload-target="approve">
+        <%= button_to "Approve", approve_booking_path(booking), method: :patch, class: "btn btn-primary",
+          data: { action: "submit->reload#accept" } %>
+      </div>
+      <div data-reload-target="decline">
+        <%= button_to "Decline", decline_booking_path(booking), method: :patch, class: "btn btn-danger",
+          data: { action: "submit->reload#reject" } %>
+      </div>
+    </div>
+  <% else %>
+    <div class="status">
+      <%= booking.status %>
+    </div>
+  <% end %>
+</div>
 
-              <div class="buttons status">
-                <div data-reload-target="approve">
-                  <%= button_to "Approve", approve_booking_path(booking), method: :patch, class: "btn btn-primary",
-                    data: { action: "submit->reload#accept" } %>
-                </div>
-                <div data-reload-target="decline">
-                  <%= button_to "Decline", decline_booking_path(booking), method: :patch, class: "btn btn-danger",
-                    data: { action: "submit->reload#reject" } %>
-                </div>
-              </div>
-            <% else %>
-              <div class="status">
-                <%= booking.status %>
-              </div>
-            <% end %>
-          </div>
         <% end %>
       </div>
     </div>
