--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -16,7 +16,7 @@
             input_html: { data: { controller: "datepicker" } } %>
         </div>
         <div class="submit-container">
-          <%= f.button :submit, class: "btn primary" %>
+          <%= f.button :submit, class: "btn-primary mt-4" %>
         </div>
       <% end %>
       <!-- Lightning Button Directly Under Heading -->
